ngForm for ngOnInit and ngSubmit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form [formGroup]="signupForm"]>
+      <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
           <label for="username">Username</label>
           <input
             type="text"
             id="username"
-			formControlName="username"
+			      formControlName="username"
             class="form-control">
         </div>
         <div class="form-group">
@@ -22,8 +22,9 @@
           <label>
             <input
               type="radio"
-              [value]="gender">{{ gender }}
-			formControlName="gender"
+              [value]="gender"
+              formControlName="gender">{{ gender }}
+			        
           </label>
         </div>
         <button class="btn btn-primary" type="submit">Submit</button>
