--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,14 +9,18 @@
             id="username"
 			      formControlName="username"
             class="form-control">
+            <span class="help-block"
+            *ngIf="!signupForm.get('username').valid && signupForm.get('username').touched">Please enter a valid username !</span>
         </div>
         <div class="form-group">
           <label for="email">email</label>
           <input
             type="text"
             id="email"
-			formControlName="email"
+			      formControlName="email"
             class="form-control">
+              <span class="help-block" *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched">Please enter a
+                valid email !</span>
         </div>
         <div class="radio" *ngFor="let gender of genders">
           <label>
@@ -24,9 +28,9 @@
               type="radio"
               [value]="gender"
               formControlName="gender">{{ gender }}
-			        
           </label>
         </div>
+          <span class="help-block" *ngIf="!signupForm.valid && signupForm.touched">Please enter valid data !</span>
         <button class="btn btn-primary" type="submit">Submit</button>
       </form>
     </div>
